--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,17 @@ dependencies:
   get: 4.6.6
   flutter: 
     sdk: flutter
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  dio: ^5.3.3
 
 dev_dependencies: 
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test: 
     sdk: flutter
+  freezed: ^2.4.5
+  json_serializable: ^6.7.1
 
 flutter: 
   uses-material-design: true
